- Arcana Items as entities are now immune to Lightning  - Added some textures as a teaser for a future feature  - Added a tag for potion items that can be used to tip arrows in the Fletchery  - Fixed the tag for Arcana Items that have notes in villages being merged with the tag that Wandering Traders can sell  - Fixed Greater Blindness not inflicting blindness properly (there's still a few bugs with the effect that will be dealt with later)  - Fixed using Poison and Regeneration with the Arbalest being amplified to level 10  - Fixed a bug that let you 'reroll' the Stardust Infusion board (this may be implemented as a proper feature later)  - Fixed Enhanced Infinity not requiring the Infinity enchantment  - Fixed the Spear of Tenbrous not breaking chorus flowers  - Fixed the Divine Catalyst transmutation being performed with only 2 Sovereign Catalysts  - Fixed all 'laser' effects causing massive lag (Nul Construct, Pulsar Blades, Photonic Arrows) (#32)  - Fixed Enderia spamming the console with errors (#30)  - Fixed a server start crash caused by loading Transmutation Recipes (#28)